correctly align grid and assign grid area

--- a/client/src/components/styles/Dashboard.css
+++ b/client/src/components/styles/Dashboard.css
@@ -1,6 +1,7 @@
 .dashboard-container {
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 50px;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 1fr 1fr 1fr 1fr 50px;
   grid-template-areas:
     "sidebar upcoming upcoming upcoming stats stats"
     "sidebar upcoming upcoming upcoming stats stats"
